--- a/ProfessionalEvaluation.Website/Views/Assesment/Instructions.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Instructions.cshtml
@@ -46,9 +46,12 @@
                 <p class="small mark">
                     4. Desde que inicies la prueba tendrás hasta 2 días para terminarla, luego de esto ya no podrás acceder y no tendrás ninguna calificación.
                 </p>
+                <p>
+                    Al presionar <i>Iniciar</i> el tiempo empezará a contar.
+                </p>
                 <p id="btnContinue" style="visibility: hidden">
                     <a class="btn btn-primary btn-block">Iniciar</a>
-                </p>
+                </p>                
             </header>
 
         </div>
