--- a/ProfessionalEvaluation.Website/Views/Assesment/Index.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Index.cshtml
@@ -44,7 +44,7 @@
     <script>
 
         var controllerName = "Assesment";
-        var instructionsUrl = "/" + controllerName + "/Instructions";
+        var instructionsUrl = "/" + siteUrlPrefix + controllerName + "/Instructions";
 
         var sectionTemplate = '<div class="col-md-3 col-sm-6 hero-feature">' +
                                     '<div class="thumbnail" >' +
