--- a/ProfessionalEvaluation.Website/Views/Home/Index.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Home/Index.cshtml
@@ -17,10 +17,10 @@
     <title>Laboru Tech - Evaluación Profesional</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="@Url.Content("~/vendor/bootstrap/css/bootstrap.min.css")" rel="stylesheet" type="text/css">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="@Url.Content("~/vendor/font-awesome/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
 
     <!--
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
         -->
 
     <!-- Theme CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="@Url.Content("~/css/agency.min.css")" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -170,7 +170,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/mungos.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/mungos.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Mungos</h4>
@@ -184,7 +184,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/startup-framework.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Ingenieros Express</h4>
@@ -198,7 +198,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/treehouse.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>La Esperanza</h4>
@@ -212,7 +212,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/golden.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>La Ribelina</h4>
@@ -226,7 +226,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/escape.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Mekano</h4>
@@ -240,7 +240,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="@Url.Content("~/img/portfolio/dreams.png")" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Solidaria</h4>
@@ -265,7 +265,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="@Url.Content("~/img/about/1.jpg")" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -281,7 +281,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="@Url.Content("~/img/about/2.jpg")" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -299,7 +299,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="@Url.Content("~/img/about/3.jpg")" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">                              
@@ -314,7 +314,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="@Url.Content("~/img/about/4.jpg")" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">                               
@@ -350,7 +350,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="@Url.Content("~/img/team/1.jpg")" class="img-responsive img-circle" alt="">
                         <h4>Luz María Bedoya</h4>
                         <p class="text-muted">Creativa</p>
                         <p class="text-muted"><i>Especialista en gerencia de la comunicación</i></p>
@@ -368,7 +368,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <img src="@Url.Content("~/img/team/2.jpg")" class="img-responsive img-circle" alt="">
                         <h4>Mauricio Bedoya</h4>
                         <p class="text-muted">Líder de Ingeniería</p>
                         <p class="text-muted"><i>Especialista en innovación</i></p>
@@ -391,7 +391,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <img src="@Url.Content("~/img/team/3.jpg")" class="img-responsive img-circle" alt="">
                         <h4>Juan Santiago Posada</h4>
                         <p class="text-muted">Gerente Comercial</p>
                         <p class="text-muted"><i>MBA, PMP</i></p>
@@ -422,22 +422,22 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img src="@Url.Content("~/img/logos/envato.jpg")" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="@Url.Content("~/img/logos/designmodo.jpg")" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <img src="@Url.Content("~/img/logos/themeforest.jpg")" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img src="@Url.Content("~/img/logos/creative-market.jpg")" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
@@ -518,10 +518,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="@Url.Content("~/vendor/jquery/jquery.min.js")"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="@Url.Content("~/vendor/bootstrap/js/bootstrap.min.js")"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
