--- a/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
@@ -72,6 +72,9 @@
 
     <script>
 
+        var siteUrlPrefix = '@Url.Content("~/")';
+        siteUrlPrefix = siteUrlPrefix.substring(1, siteUrlPrefix.length);
+
         function showMessage(message, type) {
 
             $("#modal_body").html(message);
@@ -94,7 +97,7 @@
         function ajaxPost(controller, method, data, fx) {
 
             $.ajax({
-                url: "/" + controller + "/" + method,
+                url: "/" + siteUrlPrefix + controller + "/" + method,
                 dataType: "json",
                 type: "POST",
                 data: data,
@@ -150,7 +153,7 @@
 
                                 title = data.Evaluation.Name;
 
-                                $("#company_logo").attr("src", "/img/" + data.Company.Logo);
+                                $("#company_logo").attr("src", '@Url.Content("~/img/")' + data.Company.Logo);
                                 $("#company_logo").css("visibility", "visible");
                             }
 
